<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movieinfo.MovieInfoActivity">

    <ImageView
        android:id="@+id/ivMoviePosterLandscape"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnViewSeatMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/cl_movie_info_btn_view_seat_map"
        android:text="@string/movie_info_btn_view_seat_map"
        android:textColor="@color/cl_movie_info_text_view_seat_map"/>

    <LinearLayout
        android:id="@+id/llMovieInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnViewSeatMap"
        android:layout_below="@id/ivMoviePosterLandscape"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:padding="10dp"
            android:scaleType="fitStart"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent"
            android:layout_weight="6">

            <!--TODO: insert custom movie details view-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_label_name"/>

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/MovieInfo.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Movie Name"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_label_genre"/>

                    <TextView
                        android:id="@+id/tvGenre"
                        style="@style/MovieInfo.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Movie Genre"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_label_rating"/>

                    <TextView
                        android:id="@+id/tvAdvisoryRating"
                        style="@style/MovieInfo.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Movie Rating"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_label_duration"/>

                    <TextView
                        android:id="@+id/tvDuration"
                        style="@style/MovieInfo.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Movie Duration"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_label_release_date"/>

                    <TextView
                        android:id="@+id/tvReleaseDate"
                        style="@style/MovieInfo.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Movie Release Date"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelSynposis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_label_synopsis"/>

                    <TextView
                        android:id="@+id/tvSynopsis"
                        style="@style/MovieInfo.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Movie Synopsis"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelCast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info_label_cast"/>

                    <TextView
                        android:id="@+id/tvCast"
                        style="@style/MovieInfo.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Movie Cast"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>